--- a/porbun-dns/README
+++ b/porbun-dns/README
@@ -15,7 +15,7 @@ To create a container, run the following command:
     -e secretapikey=<your_secretapikey> \
     jjsuperpower/porkbun_ddns
 
-This will create a container named `pb_ddns` and store the configuration in a volume named `pb_ddns_data`. You will then need to edit the file `/data/domains.txt` to add your domains and subdomains. To edit the `domains.txt` file run the following two commands to edit the file and restart the container:
+This will create a container named `pb_ddns` and store the configuration in a volume named `pb_ddns_data`. You will then need to edit the file `/data/domains.txt` to add your domains and subdomains. To edit the `domains.txt` file run and restart the container run the following commands:
 
     docker exec -it pb_ddns nano /data/domains.txt
     docker restart pb_ddns
@@ -42,6 +42,3 @@ This will create a container named `pb_ddns` and store the configuration in a vo
     myself.i.com        # update subdomain
     me.myself.i.com
     static.i.com        123.45.56.789   # set static IP address
-
-
-
